Updated degree details

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Master of the Universe  
+  uni: UC Berkeley
+  year: June, 1994 &mdash; January, 1997
   # awards:
   # summary:
